--- a/GoVoyageFX/nbproject/project.properties
+++ b/GoVoyageFX/nbproject/project.properties
@@ -29,19 +29,13 @@ dist.jar=${dist.dir}/GoVoyageFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.GMapsFX-2.12.0.jar=C:\\Users\\Lenovo\\Desktop\\GMapsFX-2.12.0.jar
-file.reference.slf4j-api-1.7.26.jar=C:\\Users\\Lenovo\\Desktop\\slf4j-api-1.7.26.jar
-file.reference.slf4j-jdk14-1.7.26.jar=C:\\Users\\Lenovo\\Desktop\\slf4j-jdk14-1.7.26.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.GMapsFX-2.12.0.jar}:\
-    ${file.reference.slf4j-api-1.7.26.jar}:\
-    ${file.reference.slf4j-jdk14-1.7.26.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
