--- a/GoVoyageFX/nbproject/project.properties
+++ b/GoVoyageFX/nbproject/project.properties
@@ -55,8 +55,7 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${kotlinc.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -124,10 +123,8 @@ mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
 run.classpath=\
-    ${dist.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${kotlinc.classpath}
+    ${build.classes.dir}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
