--- a/GoVoyageFX/nbproject/project.properties
+++ b/GoVoyageFX/nbproject/project.properties
@@ -40,6 +40,7 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${libs.MySQLDriver.classpath}:\
     ${file.reference.TrayNotification.jar}:\
     ${file.reference.javax.mail-1.4.5.jar}:\
     ${file.reference.pdfbox-app-2.0.15.jar}:\
