--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /GoVoyageFX/dist/
+GoVoyageFX/build/built-jar.properties
+GoVoyageFX/nbproject/private/private.xml
+GoVoyageFX/nbproject/private/private.properties
