--- a/GoVoyageFX/nbproject/project.properties
+++ b/GoVoyageFX/nbproject/project.properties
@@ -40,11 +40,11 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.TrayNotification.jar}:\
     ${file.reference.javax.mail-1.4.5.jar}:\
     ${file.reference.pdfbox-app-2.0.15.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
