--- a/GoVoyageFX/nbproject/private/private.properties
+++ b/GoVoyageFX/nbproject/private/private.properties
@@ -8,5 +8,5 @@ compile.on.save=false
 javafx.run.inbrowser=<Default System Browser>
 endorsed.javafx.ant.classpath=.
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 javafx.run.inbrowser.path=C\:\\Program Files\\Internet Explorer\\iexplore.exe
