--- a/GoVoyageFX/nbproject/project.properties
+++ b/GoVoyageFX/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.gson-2.8.2.jar=jar\\gson-2.8.2.jar
 file.reference.javax.mail-1.4.5.jar=jar/javax.mail-1.4.5.jar
 file.reference.kotlin-runtime.jar=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\kotlinc\\lib\\kotlin-runtime.jar
+file.reference.mysql-connector-java-5.1.13.jar=jar\\mysql-connector-java-5.1.13.jar
 file.reference.pdfbox-app-2.0.15.jar=jar\\pdfbox-app-2.0.15.jar
 file.reference.TrayNotification.jar=jar/TrayNotification.jar
 includes=**
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.TrayNotification.jar}:\
     ${file.reference.javax.mail-1.4.5.jar}:\
     ${file.reference.pdfbox-app-2.0.15.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.mysql-connector-java-5.1.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
