update screen design and fix some bugs

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ GoVoyageFX/build/classes/entite/CellHotelReservation.class
 GoVoyageFX/build/built-jar.properties
 GoVoyageFX/nbproject/private/private.properties
 GoVoyageFX/nbproject/private/private.xml
+GoVoyageFX/build/built-jar.properties
